--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!--<meta http-equiv="">-->
-    <title>Title</title>
+    <title>Contact</title>
 
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
@@ -15,39 +15,50 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html"><i class="fas fa-x-ray"></i>Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="product.html"><i class="fas fa-x-ray"></i>Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="service.html"><i class="fas fa-x-ray"></i>Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="fas fa-x-ray"></i>About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="contact.html"><i class="fas fa-x-ray"></i>Contact Us</a>
-                </li>
-            </ul>
+<header>
+
+</header>
+<div class="container">
+    <h1><i class="mb-5"></i> Contact</h1>
+    <div id="messageArea"></div>
+    <div class="row justify-content-lg-center g-3">
+    <form class="col-lg-6 col-md-10 col-sm-10">
+        <div class="input-group mb-3">
+            <span class="input-group-text">Full Name</span>
+            <input id="fullName" name="fullName" type="text" class="form-control"
+                   aria-describedby="Full Name" aria-label="Full Name Input" required>
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text">Contact Number</span>
+            <input id="contactNumber" name="contactNumber" type="tel" class="form-control"
+                   aria-describedby="Contact Number" aria-label="Contact Number Input" required>
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text">Email Address</span>
+            <input id="emailAddress" name="emailAddress" type="email" class="form-control"
+                   aria-describedby="Email Address" aria-label="Email Address Input" required>
+        </div>
+        <div class="input-group mb-3">
+            <span class="input-group-text">Your Message</span>
+            <input id="message" name="message" class="form-control"
+                   aria-describedby="Message Area" aria-label="Message Area Input">
+        </div>
+        <div class="form-check">
+            <input id=subscribeCheckBox type="checkbox" class="form-check-input">
+            <label class="form-check-label" for="subscribeCheckBox">Subscribe to our contact list</label>
+        </div>
+        <button id="sendButton" type="submit" class="btn btn-primary"><i class="fa-solid fa-envelope"></i>Submit</button>
+        <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fa-solid fa-rotate"></i>Cancel</button>
+    </form>
+        <div class="col-lg-4 col-md-4">
+            <a href="contact-list.html" class="btn btn-primary"><i class="fa-solid fa-users"></i> Show Contact List</a>
         </div>
     </div>
-</nav>
-<div class="container">
-    <h1><i class="mb-5"></i>Contact Us</h1>
 </div>
 
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./scripts/contact.js"></script>
 <script src="./scripts/app.js"></script>
 </body>
 </html>
