--- a/header.html
+++ b/header.html
@@ -1,30 +1,47 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html"><i class="fas fa-x-ray"></i> Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="product.html"><i class="fas fa-x-ray"></i> Product</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="service.html"><i class="fas fa-x-ray"></i> Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html"><i class="fas fa-x-ray"></i> About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><i class="fas fa-x-ray"></i> Contact Us</a>
-                </li>
-                <li id = "login" class="nav-item">
-                    <a class="nav-link" href="login.html"><i class="fas fa-x-ray"></i> Login</a>
-                </li>
-            </ul>
+<!-- HEADER FILE -->
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img class="logo-img" src="./images/logo.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="portfolio.html">Portfoilo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="team.html">Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="blog.html" id="blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active p-2" href="events.html">Events</a>
+                    </li>
+                    <li id="login" class="nav-item">
+                        <a class="nav-link" href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <script async src="https://cse.google.com/cse.js?cx=62626868404f645b9">
+                        </script>
+                        <div class="gcse-search"></div>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
+
