--- a/index.html
+++ b/index.html
@@ -7,18 +7,44 @@
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="./content/app.css">
 </head>
-
 <body>
-<header>
+<header></header>
 
-</header>
-<main class="container">
-    <h1><i class="mb-5"></i>Welcome to our Website</h1>
-    <button id="AboutUsBtn" class="btn btn-primary"> About Us</button>
+
+<div class="p-3"></div>
+<main style="padding-top: 56px">
+
+
+<div class="p-2 m-2">
+    <h1 class="display-2">Welcome to Harmony Hub</h1>
+    <h3 class="display-4" id="greetingMessage"></h3>
+</div>
+
+
+<div class="slideshow-container m-5 p-5">
+    <div class="slide-home">
+        <img src="./images/cat_caviar.jpg" alt="Slide 1">
+    </div>
+    <div class="slide-home">
+        <img src="./images/cat_glass.jpg" alt="Slide 2">
+    </div>
+    <div class="slide-home">
+        <img src="./images/cat_win.jpg" alt="Slide 3">
+    </div>
+
+    <div style="text-align: center">
+        <span class="dot" style="height: 15px; width: 15px; margin: 0 2px; background-color: #bbb; border-radius: 50%; display: inline-block; transition: background-color 0.6s ease;"></span>
+        <span class="dot" style="height: 15px; width: 15px; margin: 0 2px; background-color: #bbb; border-radius: 50%; display: inline-block; transition: background-color 0.6s ease;"></span>
+        <span class="dot" style="height: 15px; width: 15px; margin: 0 2px; background-color: #bbb; border-radius: 50%; display: inline-block; transition: background-color 0.6s ease;"></span>
+    </div>
+</div>
 </main>
-
-<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<div class="last-element-above-footer"></div>
+<footer></footer>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script src="./scripts/namespace.js"></script>
+<script src="./scripts/user.js"></script>
 <script src="./scripts/app.js"></script>
 </body>
 </html>
