--- a/login.html
+++ b/login.html
@@ -2,69 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Sarah Masrie">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <!--<meta http-equiv="">-->
     <title>Login</title>
-
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="./content/app.css">
-
 </head>
-
 <body>
-<header>
+<header></header>
 
-</header>
-<main class="container" id="mainContent">
+
+<div class="container mt-5">
     <div class="row">
-        <div class="offset-md-3 col-md-6 col-sm-12">
-            <div class="login" id="contentArea">
-                <h1 class="display-4">Login</h1>
-                <form id="loginForm" novalidate>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                          <span class="input-group-addon">
-                            <i class="fa fa-user">
-                            </i>
-                          </span>
-                            <input type="text" class="form-control" id="contactName" name="userName"  required
-                                   value="" aria-label="Enter your username">
+        <div class="col-md-6 mx-auto">
+            <div class="card login-form">
+                <div class="card-body">
+                    <h5 class="card-title text-center display-5">Login</h5>
+                    <form class="container">
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username">
                         </div>
-
-                    </div>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                          <span class="input-group-addon">
-                            <i class="fa fa-lock">
-                            </i>
-                          </span>
-                            <input type="password" class="form-control" id="password" name="password"  required
-                                   value="" aria-label="Enter your password">
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
                         </div>
-
-                    </div>
-                    <div class="text-right">
-                        <button id="submitButton" type="submit" class="btn btn-primary btn-lg">Login</button>
-                    </div>
-                </form>
-
+                        <button id="loginButton" type="submit" class="btn btn-primary btn-block">Login</button>
+                    </form>
+                </div>
+                <p class="text-center text-muted small">
+                    Don't have an account?
+                    <a href="registration.html">Register Here!</a>
+                </p>
             </div>
-            <p class="text-center text-muted small">
-                Don't have an account?
-                <a href="register.html">Register Here!</a>
-            </p>
         </div>
     </div>
-</main>
-<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+</div>
+<div class="last-element-above-footer"></div>
+<footer></footer>
+
+
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./scripts/namespace.js"></script>
-<script src="./scripts/contact.js"></script>
+<script src="./scripts/user.js"></script>
 <script src="./scripts/app.js"></script>
 </body>
 </html>
